# infrastructure-fun

./: .gitignore  README.md  gke.tf  google_artifact_registry.tf  main.tf  variables.tf
.github/workflows/: build-data-storage-service.yml
argocd/: data-storage-dev-application.yaml  data-storage-prod-application.yaml
data-storage-service/: Cargo.toml  Dockerfile
data-storage-service/src/: main.rs
kubernetes/: ambassador-module.yaml  ambassador-rbac.yaml  ambassador-svc.yaml  basic-ingress.yaml  certificate.yaml
local-vault/: .gitignore  README.md  bindings.hcl
services/data-storage-service/: Cargo.toml  Dockerfile  README.md
services/data-storage-service/kubernetes/: kustomization.yml
services/data-storage-service/kubernetes/base/: deployment.yaml  kustomization.yaml  redis-deployment.yaml  redis-service.yaml  service.yaml
services/data-storage-service/kubernetes/overlays/dev/: dev.properties  host.yaml  kustomization.yaml  mapping.yaml
services/data-storage-service/kubernetes/overlays/production/: host.yaml  kustomization.yaml  mapping.yaml  production.properties
services/data-storage-service/src/: encrypt.rs  lib.rs  main.rs
