[package]
name = "data_storage_service"
version = "0.1.0"
authors = ["Rui Ramos <ruiramos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
async-std = { version = "1.6.0", features = ["attributes"] }
rand = "0.7.3"
magic-crypt = "3.1.6"
redis = "0.19.0"
